--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "This API has a general endpoint that shows a list of articles that have been created by different people, and anybody that calls this endpoint, should be able to read a blog created by them or other users.",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
     "start:dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --detectOpenHandles"
   },
   "repository": {
     "type": "git",
@@ -19,10 +18,19 @@
   },
   "homepage": "https://github.com/adekunleoloduero/altschool_second_semester_exam_blogging_api#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.7.0"
+    "jest": "^29.2.2",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
+    "mongodb-memory-server": "^8.9.3",
+    "mongoose": "^6.7.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "supertest": "^6.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
