--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start:dev": "nodemon app.js",
+    "articles:seed": "node ./seeders/articles.seeder.js",
     "test": "jest --detectOpenHandles"
   },
   "repository": {
